--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -1,7 +1,83 @@
-/* Our CSS file. */
+
+.main_box{
+    border: 2px solid black;
+    width: 100%;
+    height: 900px;
+}
+.container{
+    padding: 10px;
+}
+
+.upper_part{
+    border: 1px solid black;
+    width: 100%;
+    height: 200px;
+    background: rgb(212, 198, 198);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.lower_part{
+    border: 1px solid black;
+    width: 100%;
+    height: 100px;
+    margin-top: 10px;
+}
+.nav1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 40px 20px 0px 20px;
+
+}
+.logo{
+    margin-top: 70px;
+    margin-left: 40px;
+}
+.form{
+    margin-top: 90px;
+}
+
+.body-content{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+.content1{
+    border: 1px solid black;
+    height: 370px;
+    flex-basis: 10%;
+    margin: 10px 10px 0px 10px ;
+    padding: 10px;
+    
+}
+.content1:nth-child(2){
+    flex-grow:1;
+}
+.footer{
+
+padding: 10px;
+
+}
+.footer-para{
+    border: 1px solid black;
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+}
 
 
-.container, .content {
-width: 100%;
-height: 100%;
+.content-image img{
+    width: 100%;
+    height: 150px;
+    border-radius: 10px;
+}
+.img1{
+    display: block;
+    float: left;
+    width: 30%;
+    padding: 10px;
 }
